@@ -337,6 +337,7 @@ fully support the editing toolbar, but was found to be too confusing.
 * Removed experimental Amethyst skin from default set
 * Upgrade old skin preferences properly at Special:Preferences
   (used to spontaneously switch to Classic skin for old numeric pref records)
+* (bug 3424) Update page_touched for category members on category page creation
 
 
 === Caveats ===
